--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -22,7 +22,6 @@ a {
     text-decoration: none;
     color: black;
 }
-
 .titre_projet p {
     font-size: 20px;
 }
@@ -30,7 +29,7 @@ a {
     font-size: 12px;
 }
 
-/*Page Accueil*/
+/*---------------------------------- ACCUEIL ---------------------------------*/
 .intro {
     font-size: 18px;
 }
@@ -38,7 +37,6 @@ a {
     font-size: 14px;
     font-weight: bold;
 }
-
 .title1 {
     font-size: 26px;
 }
@@ -49,8 +47,7 @@ a {
     font-size: 26px;
 }
 
-/*Page Code poursuite*/
-
+/*---------------------------------- ARTICLE CODE POURSUITE ---------------------------------*/
 /*Paragraphe 1*/
 .partie1 .haut-image2 p{
     font-family: 'Roboto', serif;
@@ -79,7 +76,6 @@ a {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 2*/
 .partie2 .img3 p{
     font-family: 'Roboto', serif;
@@ -92,7 +88,6 @@ a {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 3*/
 .partie3 .img4 p{
     font-family: 'Roboto', serif;
@@ -111,7 +106,6 @@ a {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 4*/
 .partie4 .leg4 {
     font-family: 'Roboto', serif;
@@ -134,13 +128,11 @@ a {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Bande annonce*/
 .bande_annonce h3 {
     font-weight: normal;
     font-size: 18px;
 }
-
 /*Galerie*/
 .galerie h3 {
     font-weight: normal;
@@ -150,7 +142,6 @@ a {
     font-family: 'Roboto', serif;
     font-weight: normal;
 }
-
 /*Bouton cliquable*/
 .bouton .tex-clic p {
     font-family: 'Roboto', serif;
@@ -163,8 +154,7 @@ a {
     font-size: 12px;
 }
 
-/*Page Pollution*/
-
+/*---------------------------------- ARTICLE POLLUTION ---------------------------------*/
 /*Paragraphe 1*/
 .part1 h1 {
     font-weight: normal;
@@ -188,7 +178,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Paragraphe 2*/
 .part2 .data-center p{
     font-family: 'Roboto', serif;
@@ -217,9 +206,7 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 3*/
-
 .part3 .inter p {
     font-family: 'Roboto', serif;
     font-weight: normal;
@@ -237,7 +224,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Paragraphe 4*/
 .part4 .jeunes p {
     font-family: 'Roboto', serif;
@@ -255,7 +241,6 @@ h2 {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Interview*/
 .part5 p {
     font-family: 'Roboto', serif;
@@ -263,7 +248,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Bouton cliquable*/
 .bbt .tex-clic1_1 p {
     font-family: 'Roboto', serif;
@@ -276,8 +260,7 @@ h2 {
     font-size: 12px;
 }
 
-/*Page Solution*/
-
+/*---------------------------------- ARTICLE SOLUTION ---------------------------------*/
 /*Paragraphe 1*/
 .par1 h1{
     font-size: 22px;
@@ -301,7 +284,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 2*/
 .par2 .mac p {
     font-family: 'Roboto', serif;
@@ -314,7 +296,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 3*/
 .par3 .quest p {
     font-family: 'Roboto', serif;
@@ -339,7 +320,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 4*/
 .par4 .anciens-tels p {
     font-family: 'Roboto', serif;
@@ -358,7 +338,6 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Partie 5*/
 .par5 .firefox p {
     font-family: 'Roboto', serif;
@@ -382,7 +361,6 @@ h2 {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Bouton cliquable*/
 .bn .tex-clic-s1 p {
     font-family: 'Roboto', serif;
@@ -395,7 +373,7 @@ h2 {
     font-size: 12px;
 }
 
-/*Page Article Scientifique*/
+/*---------------------------------- ARTICLE SCIENTIFIQUE ---------------------------------*/
 
 /*Partie 1*/
 .parag1 h1 {
@@ -413,7 +391,6 @@ h2 {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Partie 2*/
 .parag2 p{
     font-family: 'Roboto', serif;
@@ -426,7 +403,6 @@ h2 {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Partie 3*/
 .parag3 h2,h3 {
     font-family: 'Roboto', serif;
@@ -440,13 +416,11 @@ h2 {
     line-height: 25px;
     font-size: 15px;
 }
-
 .parag3 .lg3 {
     font-family: 'Roboto', serif;
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Partie 4*/
 .parag4 h2 {
     font-family: 'Roboto', serif;
@@ -465,7 +439,6 @@ h2 {
     font-weight: normal;
     font-size: 9px;
 }
-
 /*Partie 5*/
 .parag5 h2 {
     font-family: 'Roboto', serif;
@@ -497,50 +470,42 @@ h2 {
 }
 
 
-/*Page Autres porojets*/
-
+/*---------------------------------- AUTRES PROJETS ---------------------------------*/
 /*Paragraphe 1*/
 .txt1 p {
     line-height: 25px;
     font-size: 15px;
 }
-
 /*Ligne 1 bande annonce*/
 .ligne1 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Ligne 2 bande annonce*/
 .ligne2 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Ligne 3 bande annonce*/
 .ligne3 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Ligne 4 bande annonce*/
 .ligne4 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Ligne 5 bande annonce*/
 .ligne5 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Ligne 6 bande annonce*/
 .ligne6 p {
     line-height: 25px;
     font-size: 18px;
 }
-
 /*Bouton cliquable*/
 .btonton .tex-clic-ap1 p {
     font-family: 'Roboto', serif;
@@ -549,8 +514,7 @@ h2 {
 }
 
 
-
-/*À propos*/
+/*---------------------------------- A PROPOS ---------------------------------*/
 /*Haut*/
 .present p {
     font-family: 'Roboto', serif;
@@ -561,7 +525,6 @@ h2 {
 .contact-moi p {
     font-size: 40px;
 }
-
 /*Footer*/
 footer{
     font-size: 12px;
